<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cnec.student.StudentEntryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/idLabel"
        android:id="@+id/idLabel"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/idField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/idField"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/code"
        android:id="@+id/codeLabel"
        android:layout_above="@+id/nameLabel"
        android:layout_alignTop="@+id/code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/code" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/code"
        android:layout_below="@+id/idField"
        android:layout_alignRight="@+id/idField"
        android:layout_alignEnd="@+id/idField"
        android:inputType="text"
        android:layout_toEndOf="@+id/nameLabel"
        android:layout_toRightOf="@+id/nameLabel"
        android:editable="true"
        android:enabled="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/nameLabel"
        android:layout_below="@+id/code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/idField"
        android:layout_toLeftOf="@+id/idField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        android:layout_alignTop="@+id/nameLabel"
        android:layout_toRightOf="@+id/nameLabel"
        android:layout_toEndOf="@+id/nameLabel"
        android:enabled="true"
        android:editable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/emailLabel"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/email"
        android:layout_above="@+id/save" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/code"
        android:layout_alignStart="@+id/code"
        android:editable="true"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/email"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/emailLabel"
        android:layout_toEndOf="@+id/emailLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete"
        android:layout_below="@+id/save"
        android:layout_alignRight="@+id/save"
        android:layout_alignEnd="@+id/save"
        android:layout_alignLeft="@+id/save"
        android:layout_alignStart="@+id/save"
        android:text="@string/deletar" />
</RelativeLayout>
